@@ -1,6 +1,7 @@
 v1.4.0 (2019.03.xx)
   - Update SQLite database engine to version 3.27.2
   - Retrieve DVR service authorization flag for tuner(s) during device discovery
+  - Log discovered HDHomeRun devices after device discovery completes
   - Increase default discovery interval from 5 minutes to 1 hour
   - Increase default lineup discovery interval from 10 minutes to 45 minutes
   - Prevent redundant rediscovery of devices and channel lineups during PVR startup task
